{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player movement",
            "id": "315d91ce-e1d2-42e3-8568-8e89858ff1bd",
            "actions": [
                {
                    "name": "Hor_mov",
                    "type": "Button",
                    "id": "5ae8c2c8-ecda-4da1-a707-d238f566ac39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ver_mov",
                    "type": "Button",
                    "id": "e369168f-9077-4e76-8803-82d1c554c4c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keys",
                    "id": "f05a49d5-35fd-40f5-ad26-a346eac271eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hor_mov",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "face40a9-507a-4991-a48c-807c75f30966",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hor_mov",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1b759d28-12f7-4e7c-b522-773349e65546",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hor_mov",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "5324fb75-8bf0-4e1b-90b4-e58b1bd8607a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ver_mov",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d1e03a73-cb97-4707-a4d1-3993135e4693",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ver_mov",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dd720d97-86e1-4402-b09d-39c62dc885f7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ver_mov",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}